feat: Add support for switching scheduler (#1724)